# housing-case-navigator

./: .gitignore  README.md  package-lock.json
backend/: pdf_reader.py  pyproject.toml  test_ocr_output.txt
backend/all_decisions_processed/: California_1556 2023.11.21 HODecision_Redacted.json  California_2200 2024.04.24 HODecision_Redacted.json  Central_511 2024.02.27 AppealDecision_Redacted.json  Chiquita_465 2023.08.04 HODecision_Redacted.json  Church_31 2024.03.25 HODecision_Redacted.json  Continental_707 2023.05.19 HODecision_Redacted.json  Continental_707 2024.03.04 HOCPDecision_Redacted.json  Del Medio_141 2022.11.18 HODecision_Redacted.json  Escuela_222 2024.01.25 AppealDecision_Redacted.json  Montecito_1260 2023.10.24 AppealDecision_Redacted.json  NShoreline_750 2022.12.08 HODecision_Redacted.json  NWhisman_100 2023.03.23 HODecision_Redacted.json  WMiddlefield_2120 2024.02.15 HODecision_Redacted.json  WMiddlefield_2120 2024.04.26 AppealDecision_Redacted.json  Wentworth_1084 2024.05.06 HODecision_Redacted.json  Whitney_2489 2024.03.20 HODecision_Redacted.json  Whitney_2489 2024.07.09 Appeal Decision_Redacted.json  Wright_1725 2023.06.09 HODecision_Redacted.json
backend/app/: auth.py  concat.py  db_utils.py  fix.py  main.py  test.py
backend/app/petition/: petition.py
backend/app/process/: process.py  process_services.py
backend/app/retrieval/: retrieval.py
backend/data/: all_decisions.json
backend/data/all_decisions_processed/: 2023-01-23 Rent Boards Finding and Decisions Appeal Case 2021056 - 2070 Glen Way Apartment F.json  (+41 more)
data/: all_decisions.json
(+13 files in other folders)
